--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "Awards"
     url: /awards/    
 
+  - title: "Chinese Blogs"
+    url: /blogs/    
+
   - title: "Misc"
-    url: /misc/    
+    url: /misc/   
 
